data/derived/fa15/progs/unify/prog0831.ml.out
Characters 69-88:
  | h::t -> [listReverse t] @ h;;
            ^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
